<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createstory.CreateStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/ll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_photo">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_take_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/take_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_photo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_choose_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/choose_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_take_photo"
                app:layout_constraintTop_toBottomOf="@id/iv_photo" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:hint="@string/caption"
            android:lines="5"
            app:layout_constraintTop_toBottomOf="@id/ll_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/create_story"
            app:layout_constraintTop_toBottomOf="@id/et_caption" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>